<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">爱奇艺</string>
    <string name="tuijian">推荐</string>
    <string name="daohang">导航</string>
    <string name="find">排行</string>
    <string name="mine">我的</string>
    <string name="title">标题</string>
    <string name="search">全网搜索</string>
    <string name="watch_of_around_person">附近的人在看</string>
    <string name="send_gift">任性送大礼</string>
    <string name="movie_ticket">电影票</string>
    <string name="game_center">游戏中心</string>
    <string name="app_shop">应用商店</string>
    <string name="my_phone">我的设备</string>
    <string name="watch_offline">离线观看</string>
    <string name="play_record">播放记录</string>
    <string name="collect">收藏</string>
    <string name="open_vip">开通VIP</string>
    <string name="help_feedback">帮助反馈</string>
    <string name="setting">设置</string>
    <string name="subscribe">订阅</string>
    <string name="not_login">未登录</string>
    <string name="login">已登录</string>
    <string name="login_for_enjoy">登录后可享受更多···</string>
    <string name="uploading_vedio">上传视频</string>
    <string name="fans">粉丝</string>
    <string name="navi_01">电视剧</string>
    <string name="navi_02">电影</string>
    <string name="navi_03">综艺</string>
    <string name="navi_04">动漫</string>
    <string name="navi_05">直播</string>
    <string name="navi_06">美女秀</string>
    <string name="navi_07">体育</string>
    <string name="navi_08">爆点</string>
    <string name="dialog_tishi">提示</string>
    <string name="dialog_ask">您确定要退出吗？</string>
    <string name="dialog_exit">离开</string>
    <string name="dialog_watchmore">再看看</string>
    <string name="toas_please_input_right_phonenum">请输入正确的手机号码</string>
    <string name="toas_please_input_passWord">请输入您的密码</string>
    <string name="toas_please_input_smscode">请输入您的验证码</string>
    <string name="toast_sms_has_send">短信已发送</string>
    <string name="toast_register_success">注册成功</string>
    <string name="toast_register_fail">验证码有误</string>
    <string name="tv_video_play_1">来源:</string>
    <string name="tv_video_play_2">时间:</string>
    <string name="tv_video_play_3">简介:</string>
</resources>
